<resources>
    <string name="app_name">Cryptocurrency</string>
    <string name="about">About</string>
    <string name="started_date">Started date:</string>
    <string name="development_status">Development status:</string>
    <string name="open_source">Open source:</string>
    <string name="team_members">Team members:</string>
    <string name="tags">Tags:</string>
    <string name="links">Links:</string>
    <string name="link_list">Link List:</string>
    <string name="the_intent_cannot_be_resolved">The intent cannot be resolved</string>
    <string name="list_not_found">List not found</string>
    <string name="coin_not_found">Coin not found</string>
    <string name="please_try_again">please, try again.</string>
    <string name="no_information">No information</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="about_this_app">About this app</string>
    <string name="message_description">This app is a platform dedicated to the world of cryptocurrencies. And it offers a complete list of cryptocurrencies, allowing you to explore and learn about each one. Clicking on a cryptocurrency gives access to the most important details. Enjoy an informative and educational experience as you learn about this revolutionary form of digital payment.</string>
</resources>