<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.coin.CoinFragment">

    <data>
        <variable
            name="viewModel"
            type="com.danielvilha.cryptocurrency.ui.coin.CoinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loading_img"
            app:coinStatus="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/text_rank"
                    style="@android:style/Widget.Material.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="100" />

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/text_rank"
                    app:layout_constraintTop_toTopOf="@+id/text_rank"
                    tools:text="Bitcoin" />

                <TextView
                    android:id="@+id/text_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/text_name"
                    app:layout_constraintTop_toTopOf="@+id/text_rank"
                    tools:text="(BTC)" />

                <TextView
                    android:id="@+id/text_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="#43A047"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/text_rank"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_rank"
                    tools:text="active" />

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/text_active"
                    app:layout_constraintStart_toStartOf="@+id/text_rank"
                    app:layout_constraintTop_toBottomOf="@+id/text_rank"
                    tools:text="@tools:sample/lorem[10]" />

                <TextView
                    android:id="@+id/text_started_date_text"
                    style="@android:style/Widget.Material.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/started_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_rank"
                    app:layout_constraintTop_toBottomOf="@+id/text_description" />

                <TextView
                    android:id="@+id/text_started_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/text_started_date_text"
                    app:layout_constraintTop_toTopOf="@+id/text_started_date_text"
                    tools:text="23/05/1983" />

                <TextView
                    android:id="@+id/text_development_status_text"
                    style="@android:style/Widget.Material.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/development_status"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_rank"
                    app:layout_constraintTop_toBottomOf="@+id/text_started_date_text" />

                <TextView
                    android:id="@+id/text_development_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/text_development_status_text"
                    app:layout_constraintTop_toTopOf="@+id/text_development_status_text"
                    tools:text="Working product" />

                <TextView
                    android:id="@+id/text_tags"
                    style="@android:style/Widget.Material.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/tags"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_rank"
                    app:layout_constraintTop_toBottomOf="@+id/text_development_status_text" />

                <TextView
                    android:id="@+id/text_team_members_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/team_members"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_rank"
                    app:layout_constraintTop_toBottomOf="@+id/chip_group" />

                <TextView
                    android:id="@+id/text_team_members"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/empty_team_members"
                    app:layout_constraintEnd_toEndOf="@+id/text_active"
                    app:layout_constraintStart_toStartOf="@+id/text_team_members_text"
                    app:layout_constraintTop_toBottomOf="@+id/text_team_members_text" />

                <TextView
                    android:id="@+id/text_links_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/links"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_rank"
                    app:layout_constraintTop_toBottomOf="@+id/text_team_members" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/text_active"
                    app:layout_constraintStart_toStartOf="@+id/text_rank"
                    app:layout_constraintTop_toBottomOf="@+id/text_tags" />

                <TextView
                    android:id="@+id/text_links"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_links_text"
                    app:layout_constraintTop_toBottomOf="@+id/text_links_text"
                    tools:text="www.google.com" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
